# ConvrterAll-In-One

./: README.md  pyproject.toml  run-tests.bat  start.bat
backend/: _test_input.md  config.py  main.py  requirements-dev.txt  requirements.txt
backend/api/: __init__.py  dependencies.py  routes.py
backend/converter/: __init__.py  docx_merge.py  pandoc_engine.py  pdf_engine.py
backend/domain/: models.py
backend/services/: __init__.py  convert_service.py
frontend/: index.html
frontend/static/: app.js  style.css
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_convert_service.py  test_pandoc_engine.py
